--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "teste": "jest",
-    "start": "node index.js"
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,17 @@
   },
   "homepage": "https://github.com/alvaroico/Jest#readme",
   "devDependencies": {
+    "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
     "jest": "^27.0.3",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.2",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6"
   }
 }
